@@ -15,4 +15,4 @@
 
 {% load wagtailimages_tags %}
 
-<div class="image">{% image image max-165x165 class="show-transparency" %}</div>
+<div class="image">{% image image max-165x165 class="show-transparency" alt="" %}</div>
